<resources>
    <string name="app_name">Voice Inbox AI</string>
    <string name="shortcut_start_recording_short">Record</string>
    <string name="shortcut_start_recording_long">Start Voice Recording</string>
    <string name="shortcut_new_text_note_short">Text note</string>
    <string name="shortcut_new_text_note_long">New text note</string>
    <string name="shortcut_all_tasks_short">Tasks</string>
    <string name="shortcut_all_tasks_long">All tasks</string>
</resources>
