<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="start_recording"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_start_recording_short"
        android:shortcutLongLabel="@string/shortcut_start_recording_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="voiceinbox://record/start"
            android:targetPackage="com.voiceinboxai"
            android:targetClass="com.voiceinboxai.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="new_text_note"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_new_text_note_short"
        android:shortcutLongLabel="@string/shortcut_new_text_note_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="voiceinbox://note/text"
            android:targetPackage="com.voiceinboxai"
            android:targetClass="com.voiceinboxai.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="all_tasks"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_all_tasks_short"
        android:shortcutLongLabel="@string/shortcut_all_tasks_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="voiceinbox://tasks"
            android:targetPackage="com.voiceinboxai"
            android:targetClass="com.voiceinboxai.MainActivity" />
    </shortcut>

</shortcuts>
